# ChangeLog for app-portage/eix
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.217 2008/04/13 20:57:04 genstef Exp $

*eix-0.12.4 (13 Apr 2008)

  13 Apr 2008; Stefan Schweizer <genstef@gentoo.org> -eix-0.9.9.ebuild,
  -eix-0.9.10.ebuild, -eix-0.10.3.ebuild, -eix-0.10.4.ebuild,
  -eix-0.11.0.ebuild, -eix-0.12.1.ebuild, -eix-0.12.2.ebuild,
  -eix-0.12.3.ebuild, +eix-0.12.4.ebuild:
  version bump, remove old

*eix-0.12.3 (04 Apr 2008)

  04 Apr 2008; Stefan Schweizer <genstef@gentoo.org> +eix-0.12.3.ebuild:
  version bump

*eix-0.12.2 (25 Mar 2008)

  25 Mar 2008; Stefan Schweizer <genstef@gentoo.org> +eix-0.12.2.ebuild:
  version bump

  21 Mar 2008; Brent Baude <ranger@gentoo.org> eix-0.10.5.ebuild:
  stable ppc64, bug 208909

  16 Mar 2008; Jeroen Roovers <jer@gentoo.org> eix-0.9.9.ebuild,
  eix-0.10.5.ebuild:
  0.10.5 stable for HPPA (bug #208909). 0.9.9 back to ~mips because of
  dev-db/sqlite.

  16 Mar 2008; nixnut <nixnut@gentoo.org> eix-0.10.5.ebuild:
  Stable on ppc wrt bug 208909

  16 Mar 2008; Samuli Suominen <drac@gentoo.org> eix-0.10.5.ebuild:
  amd64 stable

  16 Mar 2008; Raúl Porcel <armin76@gentoo.org> eix-0.10.5.ebuild:
  alpha/ia64/sparc/x86 stable

  15 Mar 2008; nixnut <nixnut@gentoo.org> eix-0.10.3.ebuild:
  Stable on ppc wrt bug 208909

  13 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> eix-0.10.3.ebuild:
  amd64 stable, bug #208909

  13 Mar 2008; Jeroen Roovers <jer@gentoo.org> eix-0.10.3.ebuild:
  Stable for HPPA (bug #208909).

  12 Mar 2008; Raúl Porcel <armin76@gentoo.org> eix-0.10.3.ebuild:
  alpha/ia64 stable wrt #208909

  12 Mar 2008; Ferris McCormick <fmccor@gentoo.org> eix-0.10.3.ebuild:
  Sparc stable --- Bug #208909 --- it's been fine for over 60 days.

  12 Mar 2008; Dawid Węgliński <cla@gentoo.org> eix-0.10.3.ebuild:
  Stable on x86 (bug #208909)

  12 Mar 2008; Brent Baude <ranger@gentoo.org> eix-0.10.3.ebuild:
  stable ppc64, bug 208909
